# sloppy-rfc4880

./: Cargo.toml  README.md
data/: freebsd.asc  hans_acker.asc
examples/: dump.rs  split.rs  unarmor.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: rfc4880.rs
src/: armor.rs  encoding.rs  errors.rs  lib.rs  packet.rs  pubkey.rs  signature.rs
