[package]
name = "sloppy-rfc4880"
version = "0.1.5"
description = "RFC 4880 parser extract from the openpgp crate"
authors = ["Pierre-Étienne Meunier <pe@pijul.org>",
           "kpcyrd <git@rxv.cc>"]
license = "Apache-2.0"
repository = "https://github.com/kpcyrd/sloppy-rfc4880"
keywords = ["rfc4880", "pgp", "gpg", "gnupg", "openpgp"]
categories = ["parser-implementations"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "kpcyrd/sloppy-rfc4880" }

[dependencies]
log = "0.4"
byteorder = "1.2"
failure = "0.1"
base64 = "0.10"
serde = { version="1.0", features=["derive"] }
hex = "0.3.2"
sha-1 = "0.8.1"

[dev-dependencies]
env_logger = "0.6"
bytes = "0.4.10"
