[package]
name = "sloppy-rfc4880"
version = "0.2.0"
description = "RFC 4880 parser extract from the openpgp crate"
authors = ["Pierre-Étienne Meunier <pe@pijul.org>",
           "kpcyrd <git@rxv.cc>"]
license = "Apache-2.0"
repository = "https://github.com/kpcyrd/sloppy-rfc4880"
keywords = ["rfc4880", "pgp", "gpg", "gnupg", "openpgp"]
categories = ["parser-implementations"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "kpcyrd/sloppy-rfc4880" }

[dependencies]
log = "0.4"
byteorder = "1.2"
anyhow = "1.0"
base64 = "0.13"
serde = { version="1.0", features=["derive"] }
hex = "0.4"
sha-1 = "0.9"

[dev-dependencies]
env_logger = "0.9"
bytes = "1"
